trying to fix white spaces
trying to fix white spaces

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -29,7 +29,7 @@ body{
 	top: 30px;
 	margin-bottom: 25px;
 }
-@media only screen and (max-width: 750px){
+@media screen and (max-width: 750px){
 	.background{
 		background-image: url('');
 		height: auto;
@@ -305,6 +305,12 @@ h5{
 p{
     line-height: 150%;
     text-align: justify;
+	}
+
+	@media screen and (max-width: 750px){
+		p{
+			text-align: left;
+		}
 	}
 
 a:link{
